# rvue

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  clippy.sh  clippy.toml  test.sh
.agents/skills/rudo-gc-crate-switch/: SKILL.md
.cursor/commands/: speckit.constitution.md
.cursor/rules/: specify-rules.mdc
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
crates/rvue/: Cargo.toml  README.md
crates/rvue-examples/benchmark/: Cargo.toml
crates/rvue-examples/counter/: Cargo.toml
crates/rvue-examples/custom_widget/: Cargo.toml
crates/rvue-examples/form/: Cargo.toml
crates/rvue-examples/hackernews/: Cargo.toml
crates/rvue-examples/hackernews/src/: main.rs
crates/rvue-examples/layout/: Cargo.toml
crates/rvue-examples/list/: Cargo.toml
crates/rvue-examples/minimal_for_test/: Cargo.toml
crates/rvue-examples/minimal_for_test/src/: main.rs
crates/rvue-examples/scroll/: Cargo.toml
crates/rvue-examples/slots/: Cargo.toml
crates/rvue-examples/styles/: Cargo.toml
crates/rvue-macro/: Cargo.toml
crates/rvue-macro/src/: analysis.rs  ast.rs  attrs.rs  codegen.rs  codegen_helper.rs  component.rs  lib.rs  parser.rs  slot.rs  widgets.rs
crates/rvue-macro/tests/: attrs_test.rs  integration_test.rs  parsing_test.rs  reactivity_test.rs  smoke_test.rs  ui.rs
crates/rvue-macro/tests/ui/: invalid_attribute.rs  malformed_rsx.rs  unknown_widget.rs
crates/rvue-signals/: Cargo.toml
crates/rvue-signals/src/: lib.rs
crates/rvue-style/: Cargo.toml
crates/rvue-style/examples/: basic_styling.rs  reactive_styles.rs  stylesheet.rs
crates/rvue-style/src/: lib.rs  property.rs
crates/rvue-style/src/properties/: background.rs  border.rs  color.rs  computed_styles.rs  font.rs  layout.rs  mod.rs  overflow.rs  sizing.rs  spacing.rs  visibility.rs
crates/rvue-style/src/reactive/: mod.rs  style_signal.rs
crates/rvue-style/src/selectors/: element.rs  mod.rs  state.rs
crates/rvue-style/src/shared/: mod.rs
crates/rvue-style/src/stylesheet/: defaults.rs  mod.rs  parser.rs  resolver.rs  rule.rs
crates/rvue-style/src/widget/: mod.rs  styled.rs
crates/rvue-style/tests/: computed_styles_merge_test.rs  merge_test.rs  property_test.rs  reactive_test.rs  selector_test.rs  shared_test.rs  style_defaults_test.rs  stylesheet_resolution_test.rs  stylesheet_test.rs
crates/rvue-testing/: Cargo.toml
crates/rvue-testing/src/: event_recorder.rs  harness.rs  lib.rs  macros.rs  snapshot.rs  test_widget.rs
crates/rvue-testing/tests/: mod.rs
crates/rvue-testing/tests/scroll/: mod.rs  nested_overflow_test.rs  nested_scroll_test.rs  scroll_event_test.rs  scroll_transform_test.rs  scrollbar_visibility_test.rs  styles_example_debug_test.rs  styles_overflow_demo_test.rs  styles_overflow_test.rs
crates/rvue/src/: app.rs  component.rs  context.rs  effect.rs  error.rs  ev.rs  gc.rs  lib.rs  prelude.rs  reactivity.rs  runtime.rs  signal.rs  slot.rs  style.rs  text.rs  vello_util.rs  view.rs  widget.rs
crates/rvue/src/async_runtime/: cancellation.rs  component_scope.rs  dispatch.rs  mod.rs  registry.rs  resource.rs  signal_sender.rs  task.rs  ui_thread_dispatcher.rs
crates/rvue/src/event/: context.rs  dispatch.rs  focus.rs  handler.rs  hit_test.rs  mod.rs  path.rs  status.rs  types.rs  update.rs  winit_translator.rs
crates/rvue/src/layout/: mod.rs  node.rs
crates/rvue/src/properties/: map.rs  mod.rs  traits.rs  types.rs
crates/rvue/src/render/: mod.rs  scene.rs  widget.rs
crates/rvue/src/text/: cursor.rs  editor.rs
crates/rvue/src/widgets/: button.rs  checkbox.rs  flex.rs  for_loop.rs  input.rs  keyed_state.rs  mod.rs  radio.rs  scroll_bar.rs  show.rs  text.rs
crates/rvue/tests/: button_widget_test.rs  cleanup_test.rs  component_test.rs  context_gc_test.rs  context_test.rs  counter_test.rs  dispatch_concurrent_test.rs  effect_leak_test.rs  effect_test.rs  effect_thread_safety_test.rs  event_handler_test.rs  flex_styles_test.rs  for_loop_test.rs  for_test.rs  fragment_cache_test.rs  gc_safety_test.rs  gc_vec_test.rs  headless_async_refresh_test.rs  headless_refresh_test.rs  input_test.rs  layout_node_test.rs  layout_overflow_test.rs  layout_test.rs  memo_loading_test.rs  memo_test.rs  memory_benchmark.rs  render_test.rs  resource_test.rs  rudo_gc_isolation_test.rs  scroll_event_test.rs  scroll_state_test.rs  sender_thread_test.rs  show_test.rs  show_widget_test.rs  signal_test.rs  sizing_styles_test.rs  slot_props_test.rs  slot_test.rs  startup_benchmark.rs  text_input_test.rs  (+6 more)
crates/rvue/tests/unit/widgets/: button_test.rs
docs/: 2026-01-16_23-26-12_Gemini_Google_Gemini.md  2026-01-17_12-41-07_Gemini_Google_Gemini.md  2026-01-17_16-02-50_Gemini_Google_Gemini.md  2026-01-17_17-30-40_Gemini_Google_Gemini.md  api.md  async-best-practices.md  async-plan-v1.md  context-inject-plan-1.md  event-system-plan-1.md  fix-taffy-plan-1.md  for-optimize-plan-1.md  fragment-cache-design.md  macro-expansion.md  mvp-completion-summary.md  mvp-review-1.md  mvp-review-2.md  mvp-review-3.md  mvp-review-4.md  mvp-review-5.md  overflow-scrollbar-plan.md  performance.md  render-text-plan-1.md  requirements-verification.md  rudo-closure-plan-1.md  rvue-rudo-ta.md  slot-todo-1.md  style-system-spec.md  style-system-todo.md  stylo-survey-1.md  subscription-refactoring-plan.md  test-coverage.md  vello-frag-plan-1.md  vello-plan-1.md  view-macro-survey-1.md  view-macro-survey-2.md  xilem-vello-survey-1.md  xilem-vello-survey-2.md
specs/001-style-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-style-system/checklists/: requirements.md
specs/001-style-system/contracts/: api.md
specs/002-rvue-mvp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-rvue-mvp/checklists/: requirements.md
specs/002-rvue-mvp/contracts/: api.md
specs/003-rvue-async-support/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-rvue-async-support/checklists/: requirements.md
specs/003-rvue-async-support/contracts/: async-api.md
(+9 files in other folders)
