[workspace]
members = [
    "crates/rvue-signals",
    "crates/rvue",
    "crates/rvue-style",
    "crates/rvue-macro",
    "crates/rvue-testing",
    "crates/rvue-examples/counter",
    "crates/rvue-examples/list",
    "crates/rvue-examples/layout",
    "crates/rvue-examples/benchmark",
    "crates/rvue-examples/form",
    "crates/rvue-examples/slots",
    "crates/rvue-examples/styles",
    "crates/rvue-examples/scroll",
    "crates/rvue-examples/custom_widget",
    "crates/rvue-examples/minimal_for_test",
    "crates/rvue-examples/hackernews",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Rvue Contributors"]
license = "MIT OR Apache-2.0"
rust-version = "1.84"
repository = "https://github.com/anomalyco/rvue"

[workspace.dependencies]
rudo-gc = { version = "0.8.8", features = ["test-util", "default"] }
rudo-gc-derive = "0.8.8"
sys_alloc = "0.8"
libc = "0.2"
windows-sys = "0.52"

[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"

