[workspace]
members = [
    "crates/rvue-signals",
    "crates/rvue",
    "crates/rvue-style",
    "crates/rvue-macro",
    "crates/rvue-testing",
    "crates/rvue-examples/counter",
    "crates/rvue-examples/list",
    "crates/rvue-examples/layout",
    "crates/rvue-examples/benchmark",
    "crates/rvue-examples/form",
    "crates/rvue-examples/slots",
    "crates/rvue-examples/styles",
    "crates/rvue-examples/scroll",
    "crates/rvue-examples/custom_widget",
    "crates/rvue-examples/minimal_for_test",
    "crates/rvue-examples/hackernews",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Rvue Contributors"]
license = "MIT OR Apache-2.0"
rust-version = "1.84"
repository = "https://github.com/anomalyco/rvue"
keywords = ["garbage-collection", "gc", "memory", "smart-pointer"]
categories = ["memory-management", "rust-patterns"]

[workspace.dependencies]
rudo-gc = { version = "0.8.13", features = ["test-util", "default", "tracing", "debug-suspicious-sweep", "tokio"] }

[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"

