[package]
name = "rvue-macro"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Procedural macros for Rvue framework"

[lib]
proc-macro = true

[dependencies]
rudo-gc.workspace = true
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"
rstml = "0.11"
proc-macro-error2 = "2.0"
convert_case = "0.6"
itertools = "0.12"

[dev-dependencies]
trybuild = "1.0"
rvue = { path = "../rvue" }
rvue-style = { path = "../rvue-style" }
taffy = "0.9"
