[package]
name = "rvue-testing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Headless testing framework for rvue applications"
repository = "https://github.com/your-org/rvue"

[dependencies]
rvue = { path = "../rvue", features = ["testing"] }
rvue-style = { path = "../rvue-style" }
rudo-gc.workspace = true
image = "0.25"
tempfile = "3"
thiserror = "2"
rand = "0.8"
vello = "0.7"
kurbo = "0.9"
peniko = "0.5"

[dev-dependencies]