[package]
name = "rvue"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Rust GUI framework with Vue-like syntax and GC-managed memory"
repository = "https://github.com/your-org/rvue"

[dependencies]
rudo-gc = "0.1"
vello = "0.7"
wgpu = "27"
winit = "0.30"
pollster = "0.4"
thiserror = "2"
taffy = "0.9"
parley = "0.7.0"
fontique = "0.7.0"
peniko = "0.5.0"
wgpu-profiler = { version = "0.25", optional = true, default-features = false }

[features]
tracy = ["wgpu-profiler"]
