[package]
name = "minimal-for-test"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rvue = { path = "../../rvue" }
rvue-macro = { path = "../../rvue-macro" }
rvue-style = { path = "../../rvue-style" }
rudo-gc = { version = "0.8.2", features = ["test-util", "default"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
